<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/textViewAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addr_item"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/textViewLatitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lat_item"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/textViewLongitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/long_item"
            android:layout_marginBottom="14dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/edit_fab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="editLocation"
            android:contentDescription="@string/u_btn"
            app:srcCompat="@android:drawable/ic_menu_edit"
            android:focusable="true" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/remove_fab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="removeLocation"
            android:contentDescription="@string/s_btn"
            app:srcCompat="@android:drawable/ic_menu_delete"
            android:focusable="true" />
    </LinearLayout>

</LinearLayout>